cmake_minimum_required(VERSION 3.31)
project(exam_second)

set(CMAKE_CXX_STANDARD 20)

add_executable(exam_second task_41.cpp
        task_45.cpp
        task_47.cpp
        task_49.cpp
        task_51.cpp
        task_59.cpp
        task_70.cpp
        task_78.cpp
        task_79.cpp
        task_82.cpp
        task_83.cpp
        task_86.cpp
        task_87.cpp
        task_88.cpp
        task_89.cpp
        task_91.cpp
        task_92.cpp
        task_93.cpp
        task_101.cpp
        task_103.cpp
        task_106.cpp
        task_108.cpp
        task_109.cpp
        task_110.cpp
        task_112.cpp
        task_113.cpp
        task_118.cpp
        task_119.cpp
        task_126.cpp
        task_129.cpp)
